# quant-copilot

./: .gitignore  API_DOCUMENTATION.md  README.md  pyproject.toml
app/: db.py  main.py  scheduler.py
app/auth/: utils.py
app/models/: leaderboard.py  otp.py  paper_trading.py  strategy.py  strategy_blueprint.py  strategy_metrics.py  users.py
app/routes/: auth_otp.py  backtest.py  builder.py  explain.py  export.py  generate.py  leaderboard.py  metrics.py  paper_trading.py  plot.py  strategy.py
app/services/: backtest_service.py  builder_service.py  explain_service.py  leaderboard_service.py  llm_service.py  market_data_service.py  metrics.py  paper_trading_executor.py  paper_trading_service.py  plot_service.py
app/utility/: validators.py
